--- a/style/blog.css
+++ b/style/blog.css
@@ -3,6 +3,7 @@ div{
     padding: 20px 10px;
     border: 1px solid red;
     border-radius: 5px;
+    margin-bottom: 10px;
 }
 div h3{
     text-align: center;
